<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movie_activity_toolbar_menu_add_to_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/movie_activity_toolbar_menu_add_to_favorites_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/movie_activity_toolbar_menu_remove_from_favorites"
        android:icon="@drawable/ic_favorite_pressed"
        android:title="@string/movie_activity_toolbar_menu_remove_from_favorites_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/movie_activity_toolbar_menu_add_to_watchlist"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/movie_activity_toolbar_menu_add_to_watchlist_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/movie_activity_toolbar_menu_remove_from_watchlist"
        android:icon="@drawable/ic_watchlist_pressed"
        android:title="@string/movie_activity_toolbar_menu_remove_from_watchlist_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/movie_activity_toolbar_menu_add_to_playlist"
        android:icon="@drawable/ic_add_movie_to_playlist"
        android:title="@string/movie_activity_toolbar_menu_add_movie_to_playlist_text"
        app:showAsAction="ifRoom" />
</menu>