<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_lists_fragment_layout_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/my_lists_fragment_layout_favorites_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_lists_fragment_layout_favorites_menu_text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/flat_button_background"
                    android:padding="8dp"
                    android:text="@string/my_lists_fragment_layout_more_button_text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_lists_fragment_layout_playlist_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingLeft="@dimen/recycler_horizontal_padding"
                    android:paddingRight="@dimen/recycler_horizontal_padding" />

                <ProgressBar
                    android:id="@+id/my_lists_fragment_layout_favorites_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/my_lists_fragment_layout_favorites_empty_list_label"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/my_lists_fragment_layout_empty_favorites_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/my_lists_fragment_layout_watchlist_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_lists_fragment_layout_watchlist_menu_text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/flat_button_background"
                    android:padding="8dp"
                    android:text="@string/my_lists_fragment_layout_more_button_text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_lists_fragment_layout_watchlist_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingLeft="@dimen/recycler_horizontal_padding"
                    android:paddingRight="@dimen/recycler_horizontal_padding" />

                <ProgressBar
                    android:id="@+id/my_lists_fragment_layout_watchlist_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/my_lists_fragment_layout_watchlist_empty_list_label"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/my_lists_fragment_layout_empty_watchlist_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>